Adds main-nav--opened like defoult

--- a/source/index.html
+++ b/source/index.html
@@ -29,7 +29,7 @@
           <img class="logo__icon" src="img/header-logo-mobile.svg" width="191" height="38" alt="Логотип Cat Energy.">
         </picture>
       </a>
-      <nav class="main-nav main-nav--closed main-nav--nojs">
+      <nav class="main-nav main-nav--opened main-nav--nojs">
         <button class="main-nav__toggle" aria-label="Открыть меню.">
         </button>
         <div class="main-nav__wrapper">
