Adds some correction of remarks on the protection of the project

--- a/source/index.html
+++ b/source/index.html
@@ -145,8 +145,8 @@
         <a class=" social__link social__link--telegram" href="https://t.me/htmlacademy" aria-label="Телеграм."></a>
       </div>
       <div class="footer__academy-logo-wrapper">
-        <a class="footer__academy-logo-letter" href="https://htmlacademy.ru/"></a>
-        <a class="footer__academy-logo" href="https://htmlacademy.ru/"></a>
+        <a class="footer__academy-logo-letter" href="https://htmlacademy.ru/" aria-label="Сайт академии."></a>
+        <a class="footer__academy-logo" href="https://htmlacademy.ru/" aria-label="Сайт академии."></a>
       </div>
     </div>
   </footer>
