--- a/source/index.html
+++ b/source/index.html
@@ -29,7 +29,7 @@
           <img class="logo__icon" src="img/header-logo-mobile.svg" width="191" height="38" alt="Логотип Cat Energy.">
         </picture>
       </a>
-      <nav class="main-nav main-nav--opened main-nav--nojs">
+      <nav class="main-nav main-nav--closed main-nav--nojs">
         <button class="main-nav__toggle" aria-label="Открыть меню.">
         </button>
         <div class="main-nav__wrapper">
@@ -46,6 +46,23 @@
         <div class="hero__content-wrapper">
           <h1 class="hero__title">Функциональное питание&nbsp;для&nbsp;котов</h1>
           <h2 class="hero__subtitle">Занялся собой? Займись котом!</h2>
+        </div>
+        <div class="hero__illustration">
+          <picture>
+            <source type="image/webp" media="(min-width: 1200px)"
+            srcset="img/index-can-desktop.webp 1x, img/index-can-desktop@2x.webp 2x" width="552" height="499">
+            <source type="image/webp" media="(min-width: 768px)"
+            srcset="img/index-can-tablet.webp 1x, img/index-can-tablet@2x.webp 2x" width="709" height="609">
+            <source type="image/webp"
+            srcset="img/index-can-mobile.webp 1x, img/index-can-mobile@2x.webp 2x" width="280" height="270">
+            <source media="(min-width: 1200px)"
+            srcset="img/index-can-desktop.png 1x, img/index-can-desktop@2x.png 2x" width="552"
+            height="499">
+            <source media="(min-width: 768px)" srcset="img/index-can-tablet.png 1x, img/index-can-tablet@2x.png 2x"
+              width="709" height="609">
+            <img class="hero__image" src="img/index-can-mobile.png" width="280" height="270"
+              srcset="img/index-can-mobile@2x.png" alt="Изображение продукта Cat Energy Slim 500г.">
+          </picture>
         </div>
         <a class="button button--program" href="form.html">Подобрать программу</a>
       </div>
